# dcp-platform

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  .huawei_calc_snapshot.txt  CHANGELOG.md  DEPLOYMENT.md  README.md  REPO_MAP.md  SECURITY.md  docker-compose.prod.yml  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  safe-reload.sh  tailwind.config.ts  tsconfig.json
.github/: OVERVIEW.md  PULL_REQUEST_TEMPLATE.md
app/: OVERVIEW.md  globals.css  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
backend/: .env.example  OVERVIEW.md  ecosystem.config.js  jest.config.js  package-lock.json  package.json
components/: OVERVIEW.md
contracts/: OVERVIEW.md  README.md  package-lock.json  package.json
docker-templates/: OVERVIEW.md  README.md  arabic-rag-complete.json  lora-finetune.json  qlora-finetune.json  vllm-serve.json
docs/: BINARY-SIGNING.md  CHANGELOG-2026-05-09-Auth-Onboarding.md  CHANGELOG-SECURITY-2026-06-24.md  CHANGELOG.md  COMPLIANCE.md  CONTAINER-BUILD-DEPLOYMENT.md  CONTAINER-BUILD-GUIDE.md  DCP-629-DOCKER-BUILD-GUIDE.md  DCP-Agent-Technical-Spec.md  DCP-WINDOWS-INSTALLER-DESIGN.md  DEPLOY-REQUEST-v4.1.0-wizard.md  ESCROW-INTEGRATION-GUIDE.md  GITHUB-ACTIONS-DOCKER-HUB-SETUP.md  OVERVIEW.md  PRICING-AUDIT.md  PROVIDER-DASHBOARD-GUIDE.md  PROVIDER-EARNINGS-GUIDE.md  (+32 more)
sdk/python/: pyproject.toml
sdk/python/dc1/: cli.py  client.py  http.py
sdk/python/dc1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sdk/python/dc1/resources/: __init__.py  pods.py
sdk/python/dc1_provider/: _http.py
(+994 files in other folders)
