[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dc1"
version = "0.1.0"
description = "Official Python SDK for the DCP GPU compute marketplace"
readme = "README.md"
authors = [{ name = "DCP", email = "dev@dcp.sa" }]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["gpu", "compute", "ai", "inference", "dcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []  # stdlib-only; no third-party deps

[project.scripts]
dcp = "dc1.cli:main"

[project.urls]
Homepage = "https://dcp.sa"
Documentation = "https://dcp.sa/docs"
Repository = "https://github.com/dhnpmp-tech/dcp-platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["dc1*"]
